--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 	<script src="features/zeroclipboard.min.js"></script>
 	<script src="features/cypress.core.js"></script>
 	<script src="features/cypress.retrieval.js"></script>
-	-->
 
 	<!-- styles -->
 	<link href="styles/cypress-retrieval.css" rel="stylesheet" type="text/css">
@@ -109,23 +108,24 @@
 						</ul>
 						<h4>Resources: リソース情報</h4>
 						<ul>
-							<li>Document: <a href="https://miramiku.github.io/post/wizon/cypress/">Cypress Docs <img src="images/recollection.png" alt="recollection"></a></li>
-							<li>Ripository: <a href="https://github.com/miramiku/Cypress">miramiku/Cypress <span class="icon">&#xeab4;</span></a></li>
+							<li>Document: <a href="https://miramiku.github.io/post/wizon/cypress/">Cypress Docs  [broken] <img src="images/recollection.png" alt="recollection"></a></li>
+							<li>Repository: <a href="https://github.com/miramiku/Cypress">miramiku/Cypress <span class="icon">&#xeab4;</span></a></li>
 							<li>Processed Database: <a href="https://miramiku.github.io/Cypress/features/equipments.json">equipment.json</a></li>
 							<li>Original Database: <a href="https://onedrive.live.com/redir?resid=716b8a626fb713c5!2372&amp;authkey=!AFFFx02yh8Ck5Ss&amp;ithint=file%2cxlsm">equipment.db.xlsm (Read only)</a></li>
 						</ul>
 						<h4>Changelog: 変更履歴</h4>
 						<ul>
+							<li>[2025-03-16] [v2.1.14] スペルミス修正</li>
 							<li>[2017-01-28] [v2.1.13] データベースの固定化</li>
 							<li>[2016-11-08] [v2.1.12] グレード 26 装備品への対応</li>
 							<li>[2016-10-28] [v2.1.11] Other 品質の装備が鍛錬できてしまう不具合を修正 <a href="https://github.com/miramiku/Cypress/issues/110">#112</a></li>
 							<li>[2016-10-13] [v2.1.10] 細かな修正 (Issues <a href="https://github.com/miramiku/Cypress/issues/110">#110</a>, <a href="https://github.com/miramiku/Cypress/issues/111">#111</a>)</li>
 							<li>[2016-10-04] [v2.1.9] レベル 90 への対応</li>
-							<li>もっと見る：<a href="https://miramiku.github.io/post/wizon/cypress/change-log/">Cypress 変更履歴 <img src="images/recollection.png" alt="recollection"></a></li>
+							<li>もっと見る：<a href="https://miramiku.github.io/post/wizon/cypress/change-log/">Cypress 変更履歴 [broken] <img src="images/recollection.png" alt="recollection"></a></li>
 						</ul>
 						<h4>Advanced usage: 右のパネルではできない詳細な検索</h4>
 						<ul>
-							<li><a href="https://miramiku.github.io/post/wizon/cypress/advanced-usage/">高度な検索 <img src="images/recollection.png" alt="recollection"></a></li>
+							<li><a href="https://miramiku.github.io/post/wizon/cypress/advanced-usage/">高度な検索 [broken] <img src="images/recollection.png" alt="recollection"></a></li>
 						</ul>
 					</div><!-- #landing -->
 				</div><!-- .equipment-card-inner -->
@@ -142,9 +142,9 @@
 			<button id="lexicographic-sort-order-change" data-order="ASC" disabled><span class="icon">&#xe603;</span> 辞書順　</button>
 		</div>
 		<div id="lexicographic-sort-list">
-			<input type="radio" name="laxicographic-sort-order" data-key="NAME"          data-label="装備名" checked>
-			<input type="radio" name="laxicographic-sort-order" data-key="WHEN_EQUIPPED" data-label="装備時付与効果">
-			<input type="radio" name="laxicographic-sort-order" data-key="STATUS_CHANGE" data-label="状態異常">
+			<input type="radio" name="lexicographic-sort-order" data-key="NAME"          data-label="装備名" checked>
+			<input type="radio" name="lexicographic-sort-order" data-key="WHEN_EQUIPPED" data-label="装備時付与効果">
+			<input type="radio" name="lexicographic-sort-order" data-key="STATUS_CHANGE" data-label="状態異常">
 		</div><!-- #lexicographic-sort-list -->
 
 		<div class="sort-checkbox-top-category">
